Luacheck, core, and xcompat

--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,4 @@
 name = train_gravels
 title = Train Gravels
 description = Gravel-related blocks for advtrains
-depends = default
-optional_depends = moreblocks, techinc_worldgen, screwdriver, advtrains_train_track
+optional_depends = xcompat, moreblocks, techinc_worldgen, screwdriver, advtrains_train_track
